--- a/reactCC.html
+++ b/reactCC.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>ScaleLab by lzrdGreen</h1>
+    <h1>ScaleLabs by lzrdGreen</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
