--- a/proj.html
+++ b/proj.html
@@ -19,9 +19,8 @@
     </nav>
   </header>
 
-  <main>
-    <p><strong></strong></p>
-    <h1>Portfolio</h1>
+  <main>    
+    <h1 id="top">Portfolio</h1>
     <p><strong>Introduction: </strong>In late August 2024, I embarked on the ITOL program, a focused learning experience designed to equip its students with practical skills in web development and cloud technologies. While I already possessed a solid foundation in many of these areas, including HTML and CSS experience dating back to around 2000, the program's structured curriculum provided a valuable opportunity to refine my existing knowledge, explore new techniques, and gain practical experience through project work. The program encompassed three key projects and two cloud certification exams (Azure Fundamentals AZ-900 and AWS Cloud Practitioner CLF-C02), providing a clear path for skill development. My project work reflects this progression, starting with foundational web concepts and culminating in a cloud-ready web application.</p>  
 
     <h2>Front End Design</h2>
@@ -163,13 +162,7 @@
     </ul>
     <p>GitHub repo: <a href="https://github.com/lzrdGreen/Intermediate-Concepts-in-Python">github.com/lzrdGreen/Intermediate-Concepts-in-Python</a></p>
     <p><strong>Relevant skills: </strong>Python, Unit Testing, Regular Expressions</p>
-
-  
-
-    
-
-
-        
+    <p><a href="#top">Jump to the Top</a></p>        
   </main>
 
   
