--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <button id="about-me" onclick="location.href='#about'">About Me</button>
        
 
-    <h2>Selected Projects</h2>
+    <h2 id="top">Selected Projects</h2>
     <h3>Project Management System</h3>
     <figure>
       <a target="_blank" href="images/pms.png">
