Style.css updated to minimalist view

--- a/pms.html
+++ b/pms.html
@@ -9,18 +9,20 @@
 </head>
 <body>
   <header>
-    <h1>ScaleLabs by lzrdGreen</h1>
+    <h1>Oleksandr Parshakov</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="proj.html">Portfolio</a></li>
-            <li><a href="legacy.html">Legacy Projects</a></li>               
+            <li><a href="legacy.html">Legacy Projects</a></li>
+            <li><a href="cloud.html">My Cloud Journey</a></li>
+            <li><a href="about.html">About Me</a></li>                
         </ul>
     </nav>
   </header>
 
   <main>
-    <h2>Project Management System</h2>
+    <h2 id="top">Project Management System</h2>
     <button id="pms-site" onclick="location.href='https://alexpar.pythonanywhere.com/pms/'">Visit Site</button>
     <p><strong>Overview/Goals: </strong>The PMS app offers a user-friendly, versatile project management solution, enabling users to efficiently create, view, edit, and delete tasks and projects (CRUD operations). It provides dual views (list and board) for enhanced project visualisation, streamlining workflows while prioritising simplicity and usability. Designed for small businesses and freelancers, the app avoids feature overload often found in complex tools. Currently, my focus is on migrating the application to the cloud using a "lift, tinker, and shift" strategy to explore containerization and AWS services.</p>
     <p>GitHub repo: <a href="https://github.com/lzrdGreen/pms">github.com/lzrdGreen/pms</a></p>
@@ -109,14 +111,16 @@
         <li><p>Future development will explore integrations with external tools (like calendar applications) to enhance workflow compatibility.</p></li>
     </ul>
     <p><strong></strong></p>
+
+    <p><a href="#top">Jump to the Top</a></p>
 </main>
 
   
 
 <footer>
-  <p>&copy; 2025 <a href="https://www.linkedin.com/in/alexander-parshakov/" style="color: white; text-decoration: none;">O.Parshakov</a></p>
- 
-  <p>Dream it. Build it.</p>
+  <p>&copy; 2025 Oleksandr Parshakov</p>    
+  <p><a href="https://www.linkedin.com/in/alexander-parshakov/">LinkedIn</a> | <a href="https://github.com/lzrdGreen">GitHub</a></p>
+  <h3>Dream it. Build it.</h3>
 </footer>
 
 
