--- a/proj.html
+++ b/proj.html
@@ -9,19 +9,21 @@
 </head>
 <body>
   <header>
-    <h1>ScaleLabs by lzrdGreen</h1>
+    <h1>Oleksandr Parshakov</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="proj.html">Portfolio</a></li>
-            <li><a href="legacy.html">Legacy Projects</a></li>               
+            <li><a href="legacy.html">Legacy Projects</a></li>
+            <li><a href="cloud.html">My Cloud Journey</a></li>
+            <li><a href="about.html">About Me</a></li>           
         </ul>
     </nav>
   </header>
 
   <main>    
     <h1 id="top">Portfolio</h1>
-    <p><strong>Introduction: </strong>In late August 2024, I embarked on the ITOL program, a focused learning experience designed to equip its students with practical skills in web development and cloud technologies. While I already possessed a solid foundation in many of these areas, including HTML and CSS experience dating back to around 2000, the program's structured curriculum provided a valuable opportunity to refine my existing knowledge, explore new techniques, and gain practical experience through project work. The program encompassed three key projects and two cloud certification exams (Azure Fundamentals AZ-900 and AWS Cloud Practitioner CLF-C02), providing a clear path for skill development. My project work reflects this progression, starting with foundational web concepts and culminating in a cloud-ready web application.</p>  
+    <p><strong>Introduction: </strong>In late August 2024, I embarked on the ITOL program (<a href="https://www.itonlinelearning-academy.com">ITonlinelarning Academy</a>), a focused learning experience designed to equip its students with practical skills in web development and cloud technologies. While I already possessed a solid foundation in many of these areas, including HTML and CSS experience dating back to around 2000, the program's structured curriculum provided a valuable opportunity to refine my existing knowledge, explore new techniques, and gain practical experience through project work. The program encompassed three key projects and two cloud certification exams (Azure Fundamentals AZ-900 and AWS Cloud Practitioner CLF-C02), providing a clear path for skill development. My project work reflects this progression, starting with foundational web concepts and culminating in a cloud-ready web application.</p>  
 
     <h2>Front End Design</h2>
     <h3>Static Website on AI</h3>
@@ -168,9 +170,9 @@
   
 
   <footer>
-    <p>&copy; 2025 <a href="https://www.linkedin.com/in/alexander-parshakov/">O.Parshakov</a></p>
-   
-    <p>Dream it. Build it.</p>
+    <p>&copy; 2025 Oleksandr Parshakov</p>    
+    <p><a href="https://www.linkedin.com/in/alexander-parshakov/">LinkedIn</a> | <a href="https://github.com/lzrdGreen">GitHub</a></p>
+    <h3>Dream it. Build it.</h3>
   </footer>
 
 
