--- a/legacy.html
+++ b/legacy.html
@@ -9,12 +9,14 @@
 </head>
 <body>
   <header>
-    <h1>ScaleLabs by lzrdGreen</h1>
+    <h1>Oleksandr Parshakov</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="proj.html">Portfolio</a></li>
-            <li><a href="legacy.html">Legacy Projects</a></li>               
+            <li><a href="legacy.html">Legacy Projects</a></li>
+            <li><a href="cloud.html">My Cloud Journey</a></li>
+            <li><a href="about.html">About Me</a></li>               
         </ul>
     </nav>
   </header>
@@ -108,9 +110,9 @@
   
 
   <footer>
-    <p>&copy; 2025 <a href="https://www.linkedin.com/in/alexander-parshakov/">O.Parshakov</a></p>
-   
-    <p>Dream it. Build it.</p>
+    <p>&copy; 2025 Oleksandr Parshakov</p>    
+    <p><a href="https://www.linkedin.com/in/alexander-parshakov/">LinkedIn</a> | <a href="https://github.com/lzrdGreen">GitHub</a></p>
+    <h3>Dream it. Build it.</h3>
   </footer>
 
 
