A couple of links added

--- a/cloud.html
+++ b/cloud.html
@@ -23,13 +23,21 @@
 
   <main>
     <h2>My Cloud Journey</h2>
-    <p>While AWS Cloud Practitioner (CLF-C02) and Azure Fundamentals (AZ-900) certifications provide only theoretical basics, I was eager to get hands-on experience. This led me to:</p>
+    <p>While AWS Cloud Practitioner (CLF-C02) and Azure Fundamentals (AZ-900) certifications provided theoretical knowledge, I was eager to get hands-on experience. This led me to:</p>
     <h3>Serverless Mini-Projects:</h3>
+    <ul>
+      <li><p><strong><a href="https://dumh9e9ycmsox.cloudfront.net" target="_blank">Positive Affirmation Generator:</a></strong> This fully serverless application leverages Amazon CloudFront for optimised content delivery, DynamoDB for storing affirmations, Lambda function for processing logic, and API Gateway to expose the functionality. Though modest in scope, this project offered valuable insight into designing and deploying a scalable, serverless stack.</p></li>
+      <li><p><strong><a href="https://d38r4k7ckji6sl.cloudfront.net" target="_blank">Random Colour Generator:</a></strong> AWS cloud computing can be intimidating, with its intricate service interactions and configurations. But it doesn’t have to be. By hosting a simple static website in an S3 bucket and using Amazon CloudFront for caching and global delivery, I built a lightweight application that demonstrates key cloud benefits: fault tolerance, high availability, cost efficiency, and a seamless user experience.</p></li>
+    </ul>         
+    
+    <figure>
       <a target="_blank" href="images/pa.png">
-      <img src="images/pa.png" alt="Positive Affirmations Generator demo page" style="float: right; width: 26%;"></a>      
-    <p>The <a href="https://dumh9e9ycmsox.cloudfront.net" target="_blank">Positive Affirmation Generator</a> – a 100% serverless application leveraging Amazon CloudFront for optimised content delivery. Though modest in scope, this working project helped me bridge the gap between certification theory and practical cloud development.</p>
+        <img src="images/pa.png" alt="Positive Affirmations Generator demo page" class="thumb"></a>
+        <a target="_blank" href="images/colourgener.png">
+          <img src="images/colourgener.png" alt="Random Colour Generator demo page" class="thumb"></a>
+    </figure>
     <h3>Current Cloud Migration Initiative:</h3>
-    <p>Building on this initial success, I'm taking on a more substantial challenge: migrating my Project Management System to AWS using a lift-tinker-and-shift strategy. This migration focuses on:</p>
+    <p>Building on this initial success, I'm taking on a more substantial challenge: migrating my <a href='pms.html'>Project Management System</a> to AWS using a lift-tinker-and-shift strategy. This migration focuses on:</p>
     <ul>
       <li><p>Implementing containerisation best practices.</p></li>
       <li><p>Utilising AWS's comprehensive DevOps tool chain.</p></li>
