Recent Developments added to the front page

--- a/index.html
+++ b/index.html
@@ -37,14 +37,13 @@
         <p>A simple yet powerful app to manage and visualise tasks with intuitive views. Built with Django.</p>
       </div>
       </a>
+    </section>
 
-      <a href="reactCC.html" class="project-link">
-      <div class="project">
-        <img src="images/rcc3.png" alt="React Crash Course">
-        <h3>React Crash Course</h3>
-        <p>An interactive crash course teaching React fundamentals with hands-on projects and real-world applications.</p>
-      </div>
-      </a>
+    <section class="recent">
+      <h3>Recent Developments</h3>
+      <p>In 2024, compact LLMs emerged as a promising area of research.</p>
+      <p>I'm currently exploring the Qwen2.5-0.5B-Instruct model in my spare time, focusing on its potential for resource-constrained environments. This initial demo showcases the supervised fine-tuning of this model. My goal is to assess the impact of SFT on the <i>perplexity of the model's generated text</i> (PPL), a metric that quantifies how well the model predicts text.</p>
+      <p><a href="https://lzrdgreen.github.io/LLMs/SFT.html">Supervised Fine Tuning of Qwen2.5-0.5B-Instruct model.</a></p>
     </section>
   </main>
 
