--- a/cloud.html
+++ b/cloud.html
@@ -36,14 +36,7 @@
         <a target="_blank" href="images/colourgener.png">
           <img src="images/colourgener.png" alt="Random Colour Generator demo page" class="thumb"></a>
     </figure>
-    <h3>Current Cloud Migration Initiative:</h3>
-    <p>Building on this initial success, I'm taking on a more substantial challenge: migrating my <a href='pms.html'>Project Management System</a> to AWS using a lift-tinker-and-shift strategy. This migration focuses on:</p>
-    <ul>
-      <li><p>Implementing containerisation best practices.</p></li>
-      <li><p>Utilising AWS's comprehensive DevOps tool chain.</p></li>
-      <li><p>Optimising the application architecture for cloud deployment.</p></li>
-    </ul>
-    <p>This initiative represents my progression from basic cloud concepts to real-world application deployment, while making full use of AWS's free tier resources for development and testing.</p>
+    <p>Building these serverless mini-projects was a blast, and offered fantastic hands-on experience tuning API, S3, and Lambda interactions – experience that reflects core principles of real cloud projects. Hopefully, they represent just the first step in my larger cloud journey.</p>
   </main>
 
   <footer>
