--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h3>Nice to meet you</h3>
       <h1>Hello, I'm Alex</h1>
       <h2>Software Developer & Problem Solver</h2>
-      <p>Welcome to my portfolio! With expertise in Python, Django, React, and a bit of cloud technologies, I build solutions that make an impact. Here are some highlights of my journey and work.</p>
+      <p>Welcome to my portfolio! With expertise in Python, Django, React, and a bit of cloud technologies, I build solutions that make an impact. As a glimpse into my journey and skills, please explore this featured project:</p>
     </section>
 
     <section class="projects">
@@ -42,7 +42,7 @@
     <section class="recent">
       <h3>Recent Developments</h3>
       <p>In 2024, compact LLMs emerged as a promising area of research.</p>
-      <p>I'm currently exploring the Qwen2.5-0.5B-Instruct model in my spare time, focusing on its potential for resource-constrained environments. This initial demo showcases the supervised fine-tuning of this model. My goal is to assess the impact of SFT on the <i>perplexity of the model's generated text</i> (PPL), a metric that quantifies how well the model predicts text.</p>
+      <p>I'm currently exploring the Qwen2.5-0.5B-Instruct model in my spare time, focusing on its potential for resource-constrained environments. This initial demo showcases the supervised fine-tuning of this model. My goal is to assess the impact of SFT on the <i>perplexity</i> (PPL), a metric that quantifies how well the model predicts the next word or token in a generated text.</p>
       <p><a href="https://lzrdgreen.github.io/LLMs/SFT.html">Supervised Fine Tuning of Qwen2.5-0.5B-Instruct model.</a></p>
     </section>
   </main>
