--- a/proj.html
+++ b/proj.html
@@ -96,6 +96,9 @@
     </ul>
     <button id="pms-details" onclick="location.href='pms.html'">View Details</button>
     <button id="pms-site" onclick="location.href='https://alexpar.pythonanywhere.com/pms/'">Visit Site</button>
+    <small><b><ins>Tip:</ins> Wait 2s & Reload if you see a confusing message like "Something went wrong while trying to load this site".</b></small>
+    <p>Actually, nothing went wrong. The hosting provider is free so they hybernate the website if unused.</p> 
+    <p><small>As I wanted hosting with free Django backend, I could find just one provider which offers it free of charge for 1 project only. Please be patient and sorry for the inconvenience.</small></p>
     <p>GitHub repo: <a href="https://github.com/lzrdGreen/pms">github.com/lzrdGreen/pms</a></p>
     <p><strong>Relevant skills:</strong> Django, SQL</p>
     <figure>
