--- a/pms.html
+++ b/pms.html
@@ -24,6 +24,9 @@
   <main>
     <h2 id="top">Project Management System</h2>
     <button id="pms-site" onclick="location.href='https://alexpar.pythonanywhere.com/pms/'">Visit Site</button>
+    <small><b>Tip: Wait 2s & Reload if you see a confusing message like "Something went wrong while trying to load this site".</b></small>
+    <p>(Actually, nothing went wrong. The hosting provider is free so they hybernate the website if unused.)</p> 
+    
     <p><strong>Overview/Goals: </strong>The PMS app offers a user-friendly, versatile project management solution, enabling users to efficiently create, view, edit, and delete tasks and projects (CRUD operations). It provides dual views (list and board) for enhanced project visualisation, streamlining workflows while prioritising simplicity and usability. Designed for small businesses and freelancers, the app avoids feature overload often found in complex tools. Currently, my focus is on migrating the application to the cloud using a "lift, tinker, and shift" strategy to explore containerization and AWS services.</p>
     <p>GitHub repo: <a href="https://github.com/lzrdGreen/pms">github.com/lzrdGreen/pms</a></p>
     <p><strong>Technical Details:</strong></p>
