--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     <section class="recent">
       <h3>Recent Developments</h3>
       <p>In 2024, compact LLMs emerged as a promising area of research.</p>
-      <p>I'm currently exploring the Qwen2.5-0.5B-Instruct model in my spare time, focusing on its potential for resource-constrained environments. This initial demo showcases the supervised fine-tuning of this model. My goal is to assess the impact of SFT on the <i>perplexity</i> (PPL), a metric that quantifies how well the model predicts the next word or token in a generated text.</p>
-      <p><a href="https://lzrdgreen.github.io/LLMs/SFT.html">Supervised Fine Tuning of Qwen2.5-0.5B-Instruct model.</a></p>
+      <p>I'm currently exploring the Qwen2.5-0.5B-Instruct model, a compact LLM with 0.5 billion parameters, in my spare time, focusing on its potential for resource-constrained environments. My <a href="legacy.html#fine-tuning">comparative assessment</a> examines various fine-tuning approaches (SFT and DPO, both independently and in combination) against each other and the baseline model. Evaluation is based on <i>perplexity</i> (PPL), a metric that quantifies how well the model predicts the next word or token in a generated text.</p>      
     </section>
   </main>
 
