Cheat Sheet page added

--- a/cloud.html
+++ b/cloud.html
@@ -16,6 +16,7 @@
         <li><a href="proj.html">Portfolio</a></li>
         <li><a href="legacy.html">Legacy Projects</a></li>
         <li><a href="cloud.html">My Cloud Journey</a></li>
+        <li><a href="chsh.html">Cheat Sheets</a></li>
         <li><a href="about.html">About Me</a></li>
       </ul>
     </nav>
@@ -25,6 +26,7 @@
     <h2>My Cloud Journey</h2>
     <p>While AWS Cloud Practitioner (CLF-C02) and Azure Fundamentals (AZ-900) certifications provided theoretical knowledge, I was eager to get hands-on experience. This led me to:</p>
     <h3>Serverless Mini-Projects:</h3>
+    <h4>(January 2025)</h4>
     <ul>
       <li><p><strong><a href="https://dumh9e9ycmsox.cloudfront.net" target="_blank">Positive Affirmation Generator:</a></strong> This fully serverless application leverages Amazon CloudFront for optimised content delivery, DynamoDB for storing affirmations, Lambda function for processing logic, and API Gateway to expose the functionality. Though modest in scope, this project offered valuable insight into designing and deploying a scalable, serverless stack.</p></li>
       <li><p><strong><a href="https://d38r4k7ckji6sl.cloudfront.net" target="_blank">Random Colour Generator:</a></strong> AWS cloud computing can be intimidating, with its intricate service interactions and configurations. But it doesn’t have to be. By hosting a simple static website in an S3 bucket and using Amazon CloudFront for caching and global delivery, I built a lightweight application that demonstrates key cloud benefits: fault tolerance, high availability, cost efficiency, and a seamless user experience.</p></li>
