--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
         <li><a href="proj.html">Portfolio</a></li>
         <li><a href="legacy.html">Legacy Projects</a></li>
         <li><a href="cloud.html">My Cloud Journey</a></li>
+        <li><a href="chsh.html">Cheat Sheets</a></li>
         <li><a href="about.html">About Me</a></li>
       </ul>
     </nav>
