--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="proj.html">Portfolio</a></li>
         <li><a href="legacy.html">Legacy Projects</a></li>
         <li><a href="cloud.html">My Cloud Journey</a></li>
+        <li><a href="chsh.html">Cheat Sheets</a></li>
         <li><a href="about.html">About Me</a></li>
       </ul>
     </nav>
@@ -26,7 +27,7 @@
       <h3>Nice to meet you</h3>
       <h1>Hello, I'm Alex</h1>
       <h2>Software Developer & Problem Solver</h2>
-      <p>Welcome to my portfolio! With expertise in Python, Django, React, and a bit of cloud technologies, I build solutions that make an impact. As a glimpse into my journey and skills, please explore this featured project:</p>
+      <p>Welcome to my portfolio! With expertise in Python, Django, JavaScript, and a bit of cloud technologies, I build solutions that make an impact. As a glimpse into my journey and skills, please explore this featured project:</p>
     </section>
 
     <section class="projects">
