--- a/proj.html
+++ b/proj.html
@@ -16,6 +16,7 @@
             <li><a href="proj.html">Portfolio</a></li>
             <li><a href="legacy.html">Legacy Projects</a></li>
             <li><a href="cloud.html">My Cloud Journey</a></li>
+            <li><a href="chsh.html">Cheat Sheets</a></li>
             <li><a href="about.html">About Me</a></li>           
         </ul>
     </nav>
@@ -27,6 +28,7 @@
 
     <h2>Front End Design</h2>
     <h3>Static Website on AI</h3>
+    <h4>(October 2024)</h4>
     <p><strong>Summary: </strong>This website offers a balanced perspective on Aritificial Intelligence, moving beyond the hype and fear to showcase its potential for positive impact. It provides concrete examples of how AI can be used constructively in business, creativity, and everyday life, offering practical insights and applications.</p>
     <ul>
       <li><p><strong>Problem: </strong>While I had a solid foundation in HTML and CSS from prior experience (dating back to around 2000), this project focused on the challenge of structuring and presenting complex information about Artificial Intelligence in a clear and accessible way, aiming for a balanced perspective that moves beyond hype and fear.</p></li>
@@ -56,6 +58,7 @@
     <p>Building on this foundation, I wanted to explore the dynamic aspects of web development and delve into the world of JavaScript.</p>
 
     <h3>JavaScript-Powered Interactive Website</h3>
+    <h4>(October 2024)</h4>
     <p><strong>Summary: </strong>This interactive website showcases my proficiency in front-end development using JavaScript and related technologies (React and d3.js). It features a variety of dynamic elements, including data visualisations with d3.js, responsive image galleries, and interactive demos, demonstrating my ability to create engaging and functional web experiences.</p>
     <ul>
       <li><p><strong>Problem: </strong>I wanted to demonstrate my growing proficiency in front-end web development, particularly JavaScript and related technologies. I aimed to showcase a range of interactive elements, data visualisation techniques, and experience with different JavaScript libraries and frameworks.</p></li>
@@ -84,10 +87,13 @@
       <p>Click on an image to enlarge it.</p>
     </figure>
 
+    <p>While developing the interactive website in October 2024, I recognised the power and potential of React but felt it needed more focused practice to become a natural part of my development toolkit. To address this, I created a comprehensive <a href="chsh.html#ReactCC">React Crash Course</a>.</p> 
+
     <p>With a solid understanding of front-end development under my belt, I was ready to tackle a more complex challenge: building a full-stack web application.</p>    
 
     <h2>Full Stack Design</h2>
     <h3 id="pms">Project Management System</h3>
+    <h4>(November 2024)</h4>
     <p><strong>Summary: </strong> The PMS app offers a user-friendly and versatile solution for managing projects. Featuring intuitive list and board views, project timelines, it simplifies task creation, organisation, and tracking, empowering you to enhance productivity and achieve project goals efficiently. Key features include CRUD operations for tasks and projects, task prioritisation, keyword search, and filtering by tags.</p>
     <ul>
       <li><p><strong>Problem: </strong>I wanted to gain practical experience with full-stack development using a robust framework. While the program curriculum focused on PHP, I opted for Django (Python) due to its modern features and strong alignment with my long-term career goals. I aimed to build a project management system to address the common problem of overly complex or inflexible project management tools. </p></li>
@@ -122,52 +128,7 @@
       </a>
       <p>Click on an image to enlarge it.</p>
     </figure>
-
-
-
-    <p>While developing the interactive website in October 2024, I recognised the power and potential of React but felt it needed more focused practice to become a natural part of my development toolkit. To address this, I created a comprehensive React Crash Course.</p>
-
-    <h3 id="ReactCC">React Crash Course</h3>
-    <p><strong>Summary: </strong> This comprehensive React Crash Course provides a structured learning path for beginners to grasp the fundamentals of React development. Through self-paced interactive lessons and a hands-on capstone project (a GitHub User Finder app), learners gain practical experience with core concepts including JSX syntax, component creation, state management, event handling, conditional rendering, and API integration.</p>
-    <ul>
-      <li><p><strong>Problem: </strong>While the ITOL program introduced me to React, I felt the need for more in-depth practice and a structured approach to master its core concepts. The existing tutorials were often either too lengthy, outdated, or lacked a coherent, beginner-friendly learning path.</p></li>
-      <li><p><strong>Solution: </strong> I developed a comprehensive React Crash Course designed for beginners with a basic understanding of JavaScript. The course features interactive lessons with clear explanations, well-commented sample code, code exercises, quizzes, and a hands-on capstone project (a GitHub User Finder app that integrates with the GitHub API) to solidify understanding and provide practical experience.</p></li>
-      <li><p><strong>Impact: </strong>This project not only solidified my own understanding of React but also provided me with valuable experience in creating educational content and structuring a learning experience. The course now exists as a website and a GitHub repository, potentially benefiting other aspiring React developers.</p></li>
-    </ul>
-    <button id="pms-details" onclick="location.href='reactCC.html'">View Details</button>
-    <button id="react-site" onclick="location.href='https://lzrdgreen.github.io/React-Crash-Course/'">Visit Site</button>
-    <p>GitHub repo: <a href="https://github.com/lzrdGreen/React-Crash-Course">github.com/lzrdGreen/React-Crash-Course</a></p>
-    <p><strong>Relevant skills: </strong> JavaScript, React, API Integration, DOM manipulation</p>
-    <figure>
-      <a target="_blank" href="images/rcc0.png">
-        <img src="images/rcc0.png" alt="React Crash Course website screenshot" class="thumb">
-      </a>
-      <a target="_blank" href="images/rccCapstone.png">
-        <img src="images/rccCapstone.png" alt="React Crash Course website screenshot" class="thumb">
-      </a>
-      <a target="_blank" href="images/rcc8.png">
-        <img src="images/rcc8.png" alt="React Crash Course website screenshot" class="thumb">
-      </a>
-      <a target="_blank" href="images/rjs2.png">
-        <img src="images/rjs2.png" alt="React Crash Course website screenshot" class="thumb">
-      </a>
-      <p>Click on an image to enlarge it.</p>
-    </figure>
-
-
-
-    <p>In spring 2024 (before joining the ITOL program), I developed a resource focused on intermediate Python concepts and best practices to deepen my knowledge in this area.</p>
-    <h3>Practical Guide to Intermediate Python</h3>
-    <p><a href="https://github.com/lzrdGreen/Intermediate-Concepts-in-Python">Intermediate Concepts and Best Practices in Python</a></p>
-    <p><strong>Summary: </strong>This repository provides a collection of examples and explanations covering intermediate Python concepts and best practices, including object-oriented programming (OOP), lambda functions, generators, regular expressions, data structures from the <code>collections</code> module and beyond, and unit testing. It serves as a practical guide for developers looking to enhance their Python skills beyond the basics.</p>
-    <ul>
-      <li><p><strong>Problem: </strong>I undertook this project to create a curated collection of intermediate Python concepts and techniques that I frequently used or found valuable. My goal was to build a readily accessible reference for myself (and refine my own understanding as a byproduct) and potentially others who may need to consolidate these scattered pieces of knowledge into a single, cohesive resource.</p></li>
-      <li><p><strong>Solution: </strong>To create this personal reference, I developed a GitHub repository containing well-commented code examples and explanations of key intermediate Python concepts. This included detailed sections on OOP (classes, inheritance, polymorphism), lambda functions, generators, regular expressions, decorators, various data structures (stacks, queues, graphs, trees), and unit testing. The repository is structured to provide clear examples and practical demonstrations of how these concepts can be applied.</p></li>
-      <li><p><strong>Impact: </strong>This project successfully consolidated my understanding of intermediate Python concepts and created a readily accessible reference for my future projects. The process of organising and documenting these concepts also significantly deepened my understanding. The repository now serves as a valuable personal learning resource and may also be beneficial to other developers seeking practical examples and explanations of these topics.</p></li>
-    </ul>
-    <p>GitHub repo: <a href="https://github.com/lzrdGreen/Intermediate-Concepts-in-Python">github.com/lzrdGreen/Intermediate-Concepts-in-Python</a></p>
-    <p><strong>Relevant skills: </strong>Python, Unit Testing, Regular Expressions</p>
-    <p><a href="#top">Jump to the Top</a></p>        
+               
   </main>
 
   
