--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="recent">
       <h3>Recent Developments</h3>
       <p>In 2024, compact LLMs emerged as a promising area of research.</p>
-      <p>I'm currently exploring the Qwen2.5-0.5B-Instruct model, a compact LLM with 0.5 billion parameters, in my spare time, focusing on its potential for resource-constrained environments. My <a href="legacy.html#fine-tuning">comparative assessment</a> examines various fine-tuning approaches (SFT and DPO, both independently and in combination) against each other and the baseline model. Evaluation is based on <i>perplexity</i> (PPL), a metric that quantifies how well the model predicts the next word or token in a generated text.</p>      
+      <p>I'm currently exploring the <a href="legacy.html#fine-tuning">fine-tuning of compact LLMs</a> with 0.5-1 billion parameters, in my spare time, focusing on their potential for resource-constrained environments. This exploration aligns with the AI-backed app industry's strategic shift towards proprietary models, driven by the rise of autonomous, self-planning, RL-optimised agents and the ongoinging market consolidation in favour of those who build their own models.</p>      
     </section>
   </main>
 
