Link to React Course deleted

--- a/chsh.html
+++ b/chsh.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Page</title>
+  <title>Cheat Sheets</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" type="image/png" href="images/lzrdGreen.jpg">
 </head>
@@ -33,7 +33,6 @@
       <li><p><strong>Impact: </strong>This project not only solidified my own understanding of React but also provided me with valuable experience in creating educational content and structuring a learning experience. The course now exists as a website and a GitHub repository, potentially benefiting other aspiring React developers.</p></li>
     </ul>
     <button id="pms-details" onclick="location.href='reactCC.html'">View Details</button>
-    <button id="react-site" onclick="location.href='https://lzrdgreen.github.io/React-Crash-Course/'">Visit Site</button>
     <p>GitHub repo: <a href="https://github.com/lzrdGreen/React-Crash-Course">github.com/lzrdGreen/React-Crash-Course</a></p>
     <p><strong>Relevant skills: </strong> JavaScript, React, API Integration, DOM manipulation</p>
     <figure>
