PMS MVP with DRF API

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
       <ul style="background-color: #d3e7f1;">
         <li><strong>Data Science/Machine Learning:</strong> Scikit-learn, NumPy, SciPy, Pandas, PyTorch</li>
         <li><strong>Data Visualisation:</strong> Matplotlib (Python), ggplot2 (R), d3.js (JavaScript)</li>
-        <li><strong>Data Tools & Processing:</strong> OpenRefine, Google Sheets, Microsoft Excel</li>
+        <li><strong>Data Tools & Processing:</strong> OpenRefine, Google Sheets</li>
       </ul>
       <h4>Cloud & DevOps</h4>
       <ul style="background-color: #e9f3f8;">
